--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "lint:biome": "biome lint --write .",
+    "lint:biome:fix": "biome lint --write --unsafe .",
     "format:biome": "biome format --write .",
     "check:biome": "biome check --write .",
     "stylelint": "stylelint \"src/**/*.{css,astro}\"",
@@ -39,48 +40,48 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/vercel": "~8.1.3",
-    "@headlessui/react": "^2.2.0",
+    "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@sentry/astro": "^8.55.0",
-    "@tailwindcss/vite": "^4.1.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^5.5.6",
+    "astro": "^5.6.1",
     "date-fns": "^4.1.0",
-    "nanostores": "^0.11.4",
-    "open-props": "^1.7.14",
+    "nanostores": "^1.0.1",
+    "open-props": "^1.7.15",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-use": "^17.6.0",
-    "sharp": "^0.33.5",
-    "tailwindcss": "^4.1.0",
+    "sharp": "^0.34.1",
+    "tailwindcss": "^4.1.3",
     "vitest": "^2.1.9"
   },
   "devDependencies": {
     "@astrojs/mdx": "~4.2.3",
     "@astrojs/react": "~4.2.3",
     "@biomejs/biome": "1.9.4",
-    "@eslint/compat": "^1.2.7",
+    "@eslint/compat": "^1.2.8",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.23.0",
+    "@eslint/js": "^9.24.0",
     "@eslint/markdown": "^6.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/canvas-confetti": "^1.9.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
-    "@types/node": "^22.13.16",
+    "@types/node": "^22.14.1",
     "@types/postcss-import": "^14.0.3",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
     "astro-eslint-parser": "^1.2.2",
     "autoprefixer": "^10.4.21",
     "browserslist": "^4.24.4",
     "canvas-confetti": "^1.9.3",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-only-warn": "^1.1.0",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
@@ -91,16 +92,16 @@
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "stylelint": "^16.17.0",
+    "stylelint": "^16.18.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.3",
     "turbo": "^2.5.0",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   },
   "engines": {
     "node": "^22.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@10.7.1"
+  "packageManager": "pnpm@10.8.0"
 }
