--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,8 @@
   "cssvar.extensions": ["css", "postcss", "jsx", "tsx", "astro"],
   "terminal.integrated.fastScrollSensitivity": 2,
   "terminal.integrated.scrollback": 10000,
-  "terminal.integrated.cursorBlinking": true
+  "terminal.integrated.cursorBlinking": true,
+  "debug.javascript.defaultRuntimeExecutable": {
+    "pwa-node": "$HOME/.local/share/mise/shims/node"
+  }
 }
