--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint .",
+    "lint": "eslint --max-warnings=0",
     "fix": "eslint . --fix",
     "format": "prettier  --write   --ignore-unknown .",
     "format-check": "prettier --check .",
@@ -43,64 +43,64 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@sentry/astro": "^8.55.0",
-    "@tailwindcss/vite": "^4.1.7",
+    "@tailwindcss/vite": "^4.1.10",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^5.9.0",
+    "astro": "^5.9.2",
     "date-fns": "^4.1.0",
-    "nanostores": "^0.11.4",
+    "nanostores": "^1.0.1",
     "open-props": "^1.7.15",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-use": "^17.6.0",
-    "sharp": "^0.33.5",
-    "tailwindcss": "^4.1.7",
-    "vitest": "^2.1.9"
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.1.10",
+    "vitest": "^3.2.3"
   },
   "devDependencies": {
     "@astrojs/mdx": "~4.3.0",
     "@astrojs/react": "~4.3.0",
-    "@eslint/compat": "^1.2.9",
+    "@eslint/compat": "^1.3.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
-    "@eslint/markdown": "^6.4.0",
+    "@eslint/js": "^9.28.0",
+    "@eslint/markdown": "^6.5.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/canvas-confetti": "^1.9.0",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-markdown": "^2.0.2",
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.15.31",
     "@types/postcss-import": "^14.0.3",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "astro-eslint-parser": "^1.2.2",
     "autoprefixer": "^10.4.21",
-    "browserslist": "^4.24.5",
+    "browserslist": "^4.25.0",
     "canvas-confetti": "^1.9.3",
-    "eslint": "^9.27.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-regexp": "^2.7.0",
+    "eslint-plugin-regexp": "^2.9.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-wc": "^3.0.1",
-    "globals": "^16.1.0",
+    "globals": "^16.2.0",
     "jiti": "^2.4.2",
     "lightningcss": "^1.30.1",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "stylelint": "^16.19.1",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "stylelint": "^16.20.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-prettier": "^5.0.3",
-    "turbo": "^2.5.3",
+    "turbo": "^2.5.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.34.0"
   },
   "engines": {
     "node": "^22.2.0",
     "pnpm": ">=9.1.2"
   },
-  "packageManager": "pnpm@10.11.1"
+  "packageManager": "pnpm@10.12.1"
 }
