--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "add": "^2.0.6",
-    "astro": "^5.9.2",
+    "astro": "^5.9.3",
     "date-fns": "^4.1.0",
     "nanostores": "^1.0.1",
     "open-props": "^1.7.15",
@@ -96,7 +96,8 @@
     "stylelint-prettier": "^5.0.3",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.0"
+    "typescript-eslint": "^8.34.0",
+    "vite": "^6.3.5"
   },
   "engines": {
     "node": "^22.2.0",
